--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,32 @@
 alembic==1.4.1
+asgiref==3.2.5
+click==7.1.1
+dj-database-url==0.5.0
+Django==3.0.4
+django-heroku==0.3.1
+ecdsa==0.15
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-Migrate==2.5.3
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.1
+jose==1.0.0
+Mako==1.1.2
+MarkupSafe==1.1.1
+psycopg2==2.8.4
+psycopg2-binary==2.8.4
+pyasn1==0.4.8
+python-dateutil==2.8.1
 python-dotenv==0.12.0
+python-editor==1.0.4
 python-jose==3.1.0
+pytz==2019.3
+rsa==4.0
+six==1.14.0
 SQLAlchemy==1.3.15
+sqlparse==0.3.1
+Werkzeug==1.0.0
+whitenoise==5.0.1
